bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: reassignment to val
  if (negative=true) {if ((a<0 && b<0)) return true}
              ^PosNeg:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (negative=true) {if ((a<0 && b<0)) return true}
                      ^